--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,63 @@
-.coucou {
-  color: blue;
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&family=Shrikhand&display=swap");
+* {
+  font-family: "Roboto", sans-serif;
 }
-.coucou__titre {
-  background-color: grey;
+
+.logo, h1, h2, h3, h4 {
+  font-family: "Shrikhand", cursive, sans-serif;
+}
+
+.logo {
+  display: flex;
+  justify-content: center;
+  font-size: 15px;
+  box-shadow: 0 2px 4px lightgray;
+  position: relative;
+}
+
+.localisation {
+  display: flex;
+  justify-content: center;
+  padding-top: 20px;
+  padding-right: 30px;
+  padding-bottom: 20px;
+  background-color: #eeeeee;
+  font-size: 16px;
+}
+.localisation p {
+  margin: unset;
+  margin-left: 20px;
+}
+
+.presentation {
+  display: flex;
+  flex-direction: column;
+  background-color: #f5f5f5;
+  padding: 10px;
+  text-align: center;
+}
+.presentation__line1 {
+  display: flex;
+  align-self: center;
+  width: 80%;
+  font-weight: 700;
+  font-size: 25px;
+  padding-top: 20px;
+}
+.presentation__line2 {
+  color: #787878;
+  font-size: 18px;
+}
+.presentation__line3 {
+  margin-top: 20px;
+  margin-bottom: 50px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  color: #fff;
+}
+.presentation__line3.btn {
+  background: linear-gradient(170deg, rgb(255, 121, 218) 0%, rgb(147, 86, 220) 100%);
+  border-radius: 30px;
+  width: 200px;
+  align-self: center;
 }/*# sourceMappingURL=style.css.map */
