--- a/CSS/Base/_core.scss
+++ b/CSS/Base/_core.scss
@@ -1,9 +1,7 @@
 .localisation {
     display: flex;
     justify-content: center;
-    padding-top: 20px;
-    padding-right: 30px;
-    padding-bottom: 20px;
+    padding: 20px 30px 20px 0;
     background-color: #eeeeee;
     font-size: 16px;
     p {
@@ -31,16 +29,105 @@
         font-size: 18px;
     }
     &__line3 {
-        margin-top: 20px;
-        margin-bottom: 50px;
-        padding-top: 20px;
-        padding-bottom: 20px;
+        margin: 20px 0 50px 0;
+        padding: 20px 0 20px 0;
         color: #fff;
-        &.btn {
-            background: linear-gradient(170deg, rgba(255,121,218,1) 0%, rgba(147,86,220,1) 100%);
-            border-radius: 30px;
-            width: 200px;
-            align-self: center;
+    }
+}
+
+.fonction {
+    padding: 30px 0 50px 0;
+    margin-left: 20px;
+    &__titre {
+        font-weight: 700;
+        font-size: 25px;
+        padding-top: 20px;
+        margin-bottom: 30px;
+    }
+    &__line {
+        display: flex;
+        justify-content: start;
+        align-items: center;
+        height: 50px;
+        gap: 20px;
+        margin-left: 10px;
+        padding: 10px 0 10px 0;
+        width: 90%;
+        margin-bottom: 30px;
+        background-color: #fafafa;
+        font-weight: 600;
+        font-size: 14px;
+        border-radius: 20px;
+        box-shadow: 3px 6px 8px #eaeaea;
+        &__icon {
+            width: 15px;
+            font-size: 17px;
+            margin-left: 10px;
+            color: #787878;
+        }
+        .fa-store {
+            color: $color-primary
+        }
+        &--active {
+            background-color: lighten($color-primary, 35%);
+        }
+        &__position {
+            display: flex;
+            align-items: center;
+            &__number {
+                left: 20px;
+                position: absolute;
+                color: #fff;
+                background-color: $color-primary;
+                height: 20px;
+                padding: 0 6px 0 6px;
+                border-radius: 20px;
+                display: flex;
+                align-items: center;
+                font-size: 12px;
+            }
+        } 
+    }
+}
+
+.restaurants {
+    padding-left: 20px;
+    padding-top: 20px;
+    background-color: #f5f5f5;
+    &__titre {
+        font-weight: 700;
+        font-size: 25px;
+        padding-top: 20px;
+        margin-bottom: 30px;
+    }
+}
+
+
+
+
+.footer {
+    background-color: lighten(black, 20%);
+    color: #fff;
+    padding-bottom: 10px;
+    &__logo {
+        margin-left: 20px;
+        padding-top: 20px;
+    }
+    &__puces {
+        list-style-type: none;
+        padding-left: 20px;
+        &__list {
+            display: flex;
+            padding-bottom: 5px;
+            font-size: 14px;
+            &__icon {
+                width: 10px;
+                font-size: 10px;
+            }
+            &--double {
+                gap: 10px;
+                align-items: center;
+            }
         }
     }
 }
