--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,7 +3,7 @@
   font-family: "Roboto", sans-serif;
 }
 
-.logo, h1, h2, h3, h4 {
+.logo, h1, h2, h3, h4, .footer__logo {
   font-family: "Shrikhand", cursive, sans-serif;
 }
 
@@ -18,9 +18,7 @@
 .localisation {
   display: flex;
   justify-content: center;
-  padding-top: 20px;
-  padding-right: 30px;
-  padding-bottom: 20px;
+  padding: 20px 30px 20px 0;
   background-color: #eeeeee;
   font-size: 16px;
 }
@@ -49,14 +47,109 @@
   font-size: 18px;
 }
 .presentation__line3 {
-  margin-top: 20px;
-  margin-bottom: 50px;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  margin: 20px 0 50px 0;
+  padding: 20px 0 20px 0;
   color: #fff;
 }
-.presentation__line3.btn {
+
+.fonction {
+  padding: 30px 0 50px 0;
+  margin-left: 20px;
+}
+.fonction__titre {
+  font-weight: 700;
+  font-size: 25px;
+  padding-top: 20px;
+  margin-bottom: 30px;
+}
+.fonction__line {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  height: 50px;
+  gap: 20px;
+  margin-left: 10px;
+  padding: 10px 0 10px 0;
+  width: 90%;
+  margin-bottom: 30px;
+  background-color: #fafafa;
+  font-weight: 600;
+  font-size: 14px;
+  border-radius: 20px;
+  box-shadow: 3px 6px 8px #eaeaea;
+}
+.fonction__line__icon {
+  width: 15px;
+  font-size: 17px;
+  margin-left: 10px;
+  color: #787878;
+}
+.fonction__line .fa-store {
+  color: #9356DC;
+}
+.fonction__line--active {
+  background-color: #f2eafb;
+}
+.fonction__line__position {
+  display: flex;
+  align-items: center;
+}
+.fonction__line__position__number {
+  left: 20px;
+  position: absolute;
+  color: #fff;
+  background-color: #9356DC;
+  height: 20px;
+  padding: 0 6px 0 6px;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  font-size: 12px;
+}
+
+.restaurants {
+  padding-left: 20px;
+  padding-top: 20px;
+  background-color: #f5f5f5;
+}
+.restaurants__titre {
+  font-weight: 700;
+  font-size: 25px;
+  padding-top: 20px;
+  margin-bottom: 30px;
+}
+
+.footer {
+  background-color: #333333;
+  color: #fff;
+  padding-bottom: 10px;
+}
+.footer__logo {
+  margin-left: 20px;
+  padding-top: 20px;
+}
+.footer__puces {
+  list-style-type: none;
+  padding-left: 20px;
+}
+.footer__puces__list {
+  display: flex;
+  padding-bottom: 5px;
+  font-size: 14px;
+}
+.footer__puces__list__icon {
+  width: 10px;
+  font-size: 10px;
+}
+.footer__puces__list--double {
+  gap: 10px;
+  align-items: center;
+}
+
+.btn {
   background: linear-gradient(170deg, rgb(255, 121, 218) 0%, rgb(147, 86, 220) 100%);
+  padding-left: 10px;
+  padding-right: 10px;
   border-radius: 30px;
   width: 200px;
   align-self: center;
