Section fonction + pied de page + début restaurants + sémantique

--- a/CSS/Base/_core.scss
+++ b/CSS/Base/_core.scss
@@ -32,18 +32,13 @@
         margin: 20px 0 50px 0;
         padding: 20px 0 20px 0;
         color: #fff;
+        box-shadow: 3px 5px 6px rgb(210, 210, 210);
     }
 }
 
 .fonction {
     padding: 30px 0 50px 0;
     margin-left: 20px;
-    &__titre {
-        font-weight: 700;
-        font-size: 25px;
-        padding-top: 20px;
-        margin-bottom: 30px;
-    }
     &__line {
         display: flex;
         justify-content: start;
@@ -92,7 +87,7 @@
 
 .restaurants {
     padding-left: 20px;
-    padding-top: 20px;
+    padding-top: 30px;
     background-color: #f5f5f5;
     &__titre {
         font-weight: 700;
