--- a/CSS/Components/_police.scss
+++ b/CSS/Components/_police.scss
@@ -1,6 +1,6 @@
 *{
     font-family: 'Roboto', sans-serif;
 }
-.logo, h1, h2, h3, h4, .footer__logo {
+.logo, h1, h3, h4, .footer__logo {
     font-family: 'Shrikhand', cursive, sans-serif;
 }
