restaurants + hover + responsive

--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -4,4 +4,6 @@
 
 @import "./Base/header";
 @import "./Base/core";
-@import "./Components/btn"
+@import "./Components/btn";
+@import "./Base/tab";
+@import "./Base/desktop";
