--- a/CSS/Base/_core.scss
+++ b/CSS/Base/_core.scss
@@ -1,3 +1,15 @@
+@media screen and (min-width: 1340px) {
+    .container {
+        width: 1340px;
+        margin: 0 auto;
+    }
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
 .localisation {
     display: flex;
     justify-content: center;
@@ -33,67 +45,127 @@
         padding: 20px 0 20px 0;
         color: #fff;
         box-shadow: 3px 5px 6px rgb(210, 210, 210);
+        cursor: pointer;
     }
 }
 
 .fonction {
     padding: 30px 0 50px 0;
     margin-left: 20px;
-    &__line {
+    &__block {
         display: flex;
-        justify-content: start;
-        align-items: center;
-        height: 50px;
-        gap: 20px;
-        margin-left: 10px;
-        padding: 10px 0 10px 0;
-        width: 90%;
-        margin-bottom: 30px;
-        background-color: #fafafa;
-        font-weight: 600;
-        font-size: 14px;
-        border-radius: 20px;
-        box-shadow: 3px 6px 8px #eaeaea;
-        &__icon {
-            width: 15px;
-            font-size: 17px;
-            margin-left: 10px;
-            color: #787878;
-        }
-        .fa-store {
-            color: $color-primary
-        }
-        &--active {
-            background-color: lighten($color-primary, 35%);
-        }
-        &__position {
+        flex-wrap: wrap;
+        &__line {
             display: flex;
             align-items: center;
-            &__number {
-                left: 20px;
-                position: absolute;
-                color: #fff;
-                background-color: $color-primary;
-                height: 20px;
-                padding: 0 6px 0 6px;
-                border-radius: 20px;
+            height: 50px;
+            gap: 20px;
+            margin-left: 10px;
+            padding: 10px 0 10px 0;
+            width: 90%;
+            margin-bottom: 30px;
+            background-color: #fafafa;
+            font-weight: 600;
+            font-size: 14px;
+            border-radius: 20px;
+            box-shadow: 3px 6px 8px #eaeaea;
+            position: relative;
+            cursor: pointer;
+            &__icon {
+                width: 15px;
+                font-size: 17px;
+                margin-left: 10px;
+                color: #787878;
+            }
+            .fa-store {
+                color: $color-primary;
+            }
+            &--active {
+                background-color: lighten($color-primary, 35%);
+            }
+            &__position {
                 display: flex;
                 align-items: center;
-                font-size: 12px;
-            }
-        } 
+                &__number {
+                    left: -10px;
+                    position: absolute;
+                    color: #fff;
+                    background-color: $color-primary;
+                    height: 20px;
+                    padding: 0 6px 0 6px;
+                    border-radius: 20px;
+                    display: flex;
+                    align-items: center;
+                    font-size: 12px;
+                }
+            } 
+        }
     }
 }
 
 .restaurants {
-    padding-left: 20px;
-    padding-top: 30px;
+    padding: 30px 20px 60px 20px;
     background-color: #f5f5f5;
     &__titre {
         font-weight: 700;
         font-size: 25px;
         padding-top: 20px;
         margin-bottom: 30px;
+    }
+    &__list {
+        &__cards {
+            width: 100%;
+            height: 245px;
+            overflow: hidden ;
+            border-radius: 15px;
+            box-shadow: 3px 6px 8px #eaeaea;
+            margin-bottom: 15px;
+            position: relative;
+            &__img {
+                width: 100%;
+                height: 170px;
+                object-fit: cover;
+                object-position: center;
+                overflow: hidden;
+            }
+            &__new {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                position: absolute;
+                color: rgb(52, 136, 84);
+                font-size: 14px;
+                right: 10px;
+                top: 10px;
+                background-color: rgb(144, 221, 182);
+                border-radius: 2px;
+                height: 25px;
+                width: 80px;
+                z-index: 2;
+            }
+            &__description {
+                display: flex;
+                margin-top: 30px;
+                margin-left: 10px;
+                &__txt {
+                    margin-top: -15px;
+                   &__line1 {
+                    margin-bottom: 5px;
+                    font-weight: 600;
+                   }
+                }
+                &__heart {
+                    display: flex;
+                    position: absolute;
+                    right: 50px;
+                    &--hover {
+                        background-clip: text;
+                        color: transparent;
+                        background: linear-gradient(170deg, rgba(255,121,218,1) 0%, rgba(147,86,220,1) 100%);
+                    }
+                }
+            }
+        }
     }
 }
 
@@ -109,19 +181,28 @@
         padding-top: 20px;
     }
     &__puces {
+        display: flex;
+        flex-direction: column;
         list-style-type: none;
         padding-left: 20px;
         &__list {
+            text-decoration: none;
+            color: #fff;
             display: flex;
-            padding-bottom: 5px;
             font-size: 14px;
+            padding-bottom: 5px;
+            display: flex;
+            gap: 10px;
+            align-items: center;
             &__icon {
                 width: 10px;
                 font-size: 10px;
             }
-            &--double {
-                gap: 10px;
-                align-items: center;
+            a {
+                color: #fff;
+                &:hover {
+                    color: $color-primary;
+                }
             }
         }
     }
