--- a/CSS/style.css
+++ b/CSS/style.css
@@ -15,6 +15,17 @@
   position: relative;
 }
 
+@media screen and (min-width: 1340px) {
+  .container {
+    width: 1340px;
+    margin: 0 auto;
+  }
+}
+a {
+  text-decoration: none;
+  color: black;
+}
+
 .localisation {
   display: flex;
   justify-content: center;
@@ -51,15 +62,19 @@
   padding: 20px 0 20px 0;
   color: #fff;
   box-shadow: 3px 5px 6px rgb(210, 210, 210);
+  cursor: pointer;
 }
 
 .fonction {
   padding: 30px 0 50px 0;
   margin-left: 20px;
 }
-.fonction__line {
+.fonction__block {
   display: flex;
-  justify-content: start;
+  flex-wrap: wrap;
+}
+.fonction__block__line {
+  display: flex;
   align-items: center;
   height: 50px;
   gap: 20px;
@@ -72,25 +87,27 @@
   font-size: 14px;
   border-radius: 20px;
   box-shadow: 3px 6px 8px #eaeaea;
+  position: relative;
+  cursor: pointer;
 }
-.fonction__line__icon {
+.fonction__block__line__icon {
   width: 15px;
   font-size: 17px;
   margin-left: 10px;
   color: #787878;
 }
-.fonction__line .fa-store {
+.fonction__block__line .fa-store {
   color: #9356DC;
 }
-.fonction__line--active {
+.fonction__block__line--active {
   background-color: #f2eafb;
 }
-.fonction__line__position {
+.fonction__block__line__position {
   display: flex;
   align-items: center;
 }
-.fonction__line__position__number {
-  left: 20px;
+.fonction__block__line__position__number {
+  left: -10px;
   position: absolute;
   color: #fff;
   background-color: #9356DC;
@@ -103,8 +120,7 @@
 }
 
 .restaurants {
-  padding-left: 20px;
-  padding-top: 30px;
+  padding: 30px 20px 60px 20px;
   background-color: #f5f5f5;
 }
 .restaurants__titre {
@@ -112,6 +128,62 @@
   font-size: 25px;
   padding-top: 20px;
   margin-bottom: 30px;
+}
+.restaurants__list__cards {
+  width: 100%;
+  height: 245px;
+  overflow: hidden;
+  border-radius: 15px;
+  box-shadow: 3px 6px 8px #eaeaea;
+  margin-bottom: 15px;
+  position: relative;
+}
+.restaurants__list__cards__img {
+  width: 100%;
+  height: 170px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+  overflow: hidden;
+}
+.restaurants__list__cards__new {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  color: rgb(52, 136, 84);
+  font-size: 14px;
+  right: 10px;
+  top: 10px;
+  background-color: rgb(144, 221, 182);
+  border-radius: 2px;
+  height: 25px;
+  width: 80px;
+  z-index: 2;
+}
+.restaurants__list__cards__description {
+  display: flex;
+  margin-top: 30px;
+  margin-left: 10px;
+}
+.restaurants__list__cards__description__txt {
+  margin-top: -15px;
+}
+.restaurants__list__cards__description__txt__line1 {
+  margin-bottom: 5px;
+  font-weight: 600;
+}
+.restaurants__list__cards__description__heart {
+  display: flex;
+  position: absolute;
+  right: 50px;
+}
+.restaurants__list__cards__description__heart--hover {
+  -webkit-background-clip: text;
+          background-clip: text;
+  color: transparent;
+  background: linear-gradient(170deg, rgb(255, 121, 218) 0%, rgb(147, 86, 220) 100%);
 }
 
 .footer {
@@ -124,21 +196,30 @@
   padding-top: 20px;
 }
 .footer__puces {
+  display: flex;
+  flex-direction: column;
   list-style-type: none;
   padding-left: 20px;
 }
 .footer__puces__list {
+  text-decoration: none;
+  color: #fff;
   display: flex;
-  padding-bottom: 5px;
   font-size: 14px;
+  padding-bottom: 5px;
+  display: flex;
+  gap: 10px;
+  align-items: center;
 }
 .footer__puces__list__icon {
   width: 10px;
   font-size: 10px;
 }
-.footer__puces__list--double {
-  gap: 10px;
-  align-items: center;
+.footer__puces__list a {
+  color: #fff;
+}
+.footer__puces__list a:hover {
+  color: #9356DC;
 }
 
 .btn {
@@ -148,4 +229,35 @@
   border-radius: 30px;
   width: 200px;
   align-self: center;
+}
+
+@media screen and (min-width: 768px) {
+  .restaurants__list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2%;
+  }
+  .restaurants__list__link {
+    width: 49%;
+  }
+  .fonction__block {
+    justify-content: center;
+  }
+  .fonction__block__line {
+    width: 50%;
+  }
+  .footer__puces {
+    flex-direction: row;
+  }
+  .footer__puces__list {
+    width: 25%;
+  }
+}
+@media screen and (min-width: 992px) {
+  .fonction__block {
+    gap: 15px;
+  }
+  .fonction__block__line {
+    width: 30%;
+  }
 }/*# sourceMappingURL=style.css.map */
