--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -4,6 +4,7 @@
 
 @import "./Base/header";
 @import "./Base/core";
+@import "./Base/footer";
 @import "./Components/btn";
 @import "./Base/tab";
 @import "./Base/desktop";
