--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,6 +7,19 @@
   font-family: "Shrikhand", cursive, sans-serif;
 }
 
+.header {
+  position: relative;
+  height: 75px;
+}
+.header__return {
+  position: absolute;
+  top: 50%;
+  left: 25px;
+  transform: translate(-50%, -50%);
+  width: 15px;
+  height: 15px;
+  z-index: 2;
+}
 .logo {
   display: flex;
   justify-content: center;
@@ -164,26 +177,25 @@ a {
 }
 .restaurants__list__cards__description {
   display: flex;
-  margin-top: 30px;
+  margin-top: 10px;
   margin-left: 10px;
 }
 .restaurants__list__cards__description__txt {
-  margin-top: -15px;
+  width: 70%;
 }
 .restaurants__list__cards__description__txt__line1 {
   margin-bottom: 5px;
   font-weight: 600;
 }
-.restaurants__list__cards__description__heart {
-  display: flex;
-  position: absolute;
-  right: 50px;
+
+.page1img__img {
+  width: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
-.restaurants__list__cards__description__heart--hover {
-  -webkit-background-clip: text;
-          background-clip: text;
-  color: transparent;
-  background: linear-gradient(170deg, rgb(255, 121, 218) 0%, rgb(147, 86, 220) 100%);
+
+.page1menu__titre {
+  display: flex;
 }
 
 .footer {
@@ -229,6 +241,29 @@ a {
   border-radius: 30px;
   width: 200px;
   align-self: center;
+}
+
+.container__heart {
+  position: relative;
+  width: 30%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.container__heart__1 {
+  position: absolute;
+}
+.container__heart__2 {
+  opacity: 0;
+  transition: all 400ms;
+  position: absolute;
+  background: linear-gradient(170deg, rgb(255, 121, 218) 0%, rgb(147, 86, 220) 100%);
+  -webkit-background-clip: text;
+          background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.container__heart__2:hover {
+  opacity: 1;
 }
 
 @media screen and (min-width: 768px) {
