--- a/CSS/Base/_footer.scss
+++ b/CSS/Base/_footer.scss
@@ -31,5 +31,11 @@
                 }
             }
         }
+        @media screen and (min-width: 768px) {
+            flex-direction: row;
+            &__list {
+                width: 25%;
+            }
+        }
     }
 }
