--- a/CSS/Components/_btn.scss
+++ b/CSS/Components/_btn.scss
@@ -1,10 +1,20 @@
 .btn {
+    display: flex;
+    margin: 20px 0 50px 0;
+    padding: 15px 0 15px 0;
+    color: #fff;
+    box-shadow: 3px 5px 6px rgb(210, 210, 210);
+    cursor: pointer;
     background: linear-gradient(170deg, rgba(255,121,218,1) 0%, rgba(147,86,220,1) 100%);
-    padding-left: 10px;
-    padding-right: 10px;
     border-radius: 30px;
     width: 200px;
     align-self: center;
+    justify-content: center;
+}
+.bouton {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
 }
 
 .container__heart {
