--- a/CSS/Base/_core.scss
+++ b/CSS/Base/_core.scss
@@ -1,5 +1,5 @@
-@media screen and (min-width: 1340px) {
-    .container {
+.container {
+    @media screen and (min-width: 1340px) {
         width: 1340px;
         margin: 0 auto;
     }
@@ -16,11 +16,23 @@ a {
     padding: 20px 30px 20px 0;
     background-color: #eeeeee;
     font-size: 16px;
-    p {
+    &__icon {
+        margin-left: 30px;
+        margin-top: 8px;
+    }
+    form {
         margin: unset;
         margin-left: 20px;
     }
+    #Ville
+    {
+        background-color: #eeeeee;
+        border: 1px solid #eeeeee;
+        font-weight: bold;
+        width: 140px;
+    }
 }
+
 
 .presentation {
     display: flex;
@@ -55,7 +67,7 @@ a {
             gap: 20px;
             margin-left: 10px;
             padding: 10px 0 10px 0;
-            width: 90%;
+            width: calc(100% - 30px);
             margin-bottom: 30px;
             background-color: #fafafa;
             font-weight: 600;
@@ -153,7 +165,7 @@ a {
                 margin-top: 10px;
                 margin-left: 10px;
                 &__txt {
-                    width: 70%;
+                    flex-grow: 1;
                    &__line1 {
                     margin-bottom: 5px;
                     font-weight: 600;
@@ -190,7 +202,7 @@ a {
     border-top-right-radius: 40px;
     &__titre {
         h1 {
-            width: 70%;
+            flex-grow: 1;
         }
         display: flex;
     }
