--- a/CSS/style.css
+++ b/CSS/style.css
@@ -35,6 +35,7 @@
     margin: 0 auto;
   }
 }
+
 a {
   text-decoration: none;
   color: black;
@@ -47,9 +48,19 @@ a {
   background-color: #eeeeee;
   font-size: 16px;
 }
-.localisation p {
+.localisation__icon {
+  margin-left: 30px;
+  margin-top: 8px;
+}
+.localisation form {
   margin: unset;
   margin-left: 20px;
+}
+.localisation #Ville {
+  background-color: #eeeeee;
+  border: 1px solid #eeeeee;
+  font-weight: bold;
+  width: 140px;
 }
 
 .presentation {
@@ -87,7 +98,7 @@ a {
   gap: 20px;
   margin-left: 10px;
   padding: 10px 0 10px 0;
-  width: 90%;
+  width: calc(100% - 30px);
   margin-bottom: 30px;
   background-color: #fafafa;
   font-weight: 600;
@@ -191,7 +202,7 @@ a {
   margin-left: 10px;
 }
 .restaurants__list__cards__description__txt {
-  width: 70%;
+  flex-grow: 1;
 }
 .restaurants__list__cards__description__txt__line1 {
   margin-bottom: 5px;
@@ -228,7 +239,7 @@ a {
   display: flex;
 }
 .pagesmenu__titre h1 {
-  width: 70%;
+  flex-grow: 1;
 }
 .pagesmenu h2 {
   font-weight: 300;
@@ -292,6 +303,10 @@ a {
   align-self: center;
   justify-content: center;
 }
+.btn:hover {
+  background: linear-gradient(170deg, #ff93e1 0%, #a16be0 100%);
+  box-shadow: 5px 7px 8px rgb(210, 210, 210);
+}
 
 .bouton {
   display: flex;
@@ -301,7 +316,7 @@ a {
 
 .container__heart {
   position: relative;
-  width: 30%;
+  width: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -336,9 +351,15 @@ a {
   box-shadow: 3px 5px 6px rgb(210, 210, 210);
   margin-right: 20px;
 }
+.menu__line:hover .menu__line__validation {
+  width: 75px;
+  min-width: 75px;
+  transition: all 400ms;
+}
 .menu__line__txt {
   padding: 15px;
-  width: 70%;
+  flex-grow: 1;
+  overflow: hidden;
 }
 .menu__line__txt__1 {
   font-weight: 600;
@@ -353,19 +374,21 @@ a {
   text-overflow: ellipsis;
 }
 .menu__line__price {
-  padding: 15px;
+  padding-bottom: 15px;
   display: flex;
   font-weight: 600;
   align-items: flex-end;
   justify-content: center;
-  flex-grow: 1;
+  width: 75px;
+  min-width: 75px;
 }
 .menu__line__validation {
   display: flex;
-  flex-grow: 1;
+  width: 0;
+  min-width: 0;
   border-bottom-right-radius: 20px;
   border-top-right-radius: 20px;
-  overflow: visible;
+  overflow: hidden;
   background-color: #99E2D0;
   justify-content: center;
   align-items: center;
