rotation icon + menu content + contact mail

--- a/CSS/Base/_core.scss
+++ b/CSS/Base/_core.scss
@@ -203,6 +203,7 @@ a {
     &__titre {
         h1 {
             flex-grow: 1;
+            margin-bottom: unset;
         }
         display: flex;
     }
