--- a/CSS/style.css
+++ b/CSS/style.css
@@ -354,6 +354,8 @@ a {
   border-radius: 15px;
   box-shadow: 3px 5px 6px rgb(210, 210, 210);
   margin-right: 20px;
+  -webkit-animation: appear 1000ms backwards;
+          animation: appear 1000ms backwards;
 }
 .menu__line:hover .menu__line__validation {
   width: 75px;
@@ -363,6 +365,46 @@ a {
 .menu__line:hover .menu__line__validation__icon {
   -webkit-animation: spin 300ms linear;
           animation: spin 300ms linear;
+}
+.menu__line--1 {
+  -webkit-animation-delay: 100ms;
+          animation-delay: 100ms;
+}
+.menu__line--2 {
+  -webkit-animation-delay: 200ms;
+          animation-delay: 200ms;
+}
+.menu__line--3 {
+  -webkit-animation-delay: 300ms;
+          animation-delay: 300ms;
+}
+.menu__line--4 {
+  -webkit-animation-delay: 400ms;
+          animation-delay: 400ms;
+}
+.menu__line--5 {
+  -webkit-animation-delay: 500ms;
+          animation-delay: 500ms;
+}
+.menu__line--6 {
+  -webkit-animation-delay: 600ms;
+          animation-delay: 600ms;
+}
+.menu__line--7 {
+  -webkit-animation-delay: 700ms;
+          animation-delay: 700ms;
+}
+.menu__line--8 {
+  -webkit-animation-delay: 800ms;
+          animation-delay: 800ms;
+}
+.menu__line--9 {
+  -webkit-animation-delay: 900ms;
+          animation-delay: 900ms;
+}
+.menu__line--10 {
+  -webkit-animation-delay: 1000ms;
+          animation-delay: 1000ms;
 }
 .menu__line__txt {
   padding: 15px;
@@ -422,5 +464,21 @@ a {
   }
   to {
     transform: rotate(360deg);
+  }
+}
+@-webkit-keyframes appear {
+  from {
+    transform: translateX(9999px);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+@keyframes appear {
+  from {
+    transform: translateX(9999px);
+  }
+  to {
+    transform: translateX(0);
   }
 }/*# sourceMappingURL=style.css.map */
