--- a/CSS/Base/_footer.scss
+++ b/CSS/Base/_footer.scss
@@ -3,6 +3,7 @@
     color: #fff;
     padding-bottom: 10px;
     &__logo {
+        font-size: 20px;
         margin-left: 20px;
         padding-top: 20px;
     }
