--- a/CSS/Base/_core.scss
+++ b/CSS/Base/_core.scss
@@ -262,6 +262,7 @@ html {
 
 .pagesimg {
     height: 250px;
+    overflow: hidden;
     &__img {
         width: 100%;
         object-fit: cover;
@@ -289,9 +290,31 @@ html {
         display: flex;
     }
     .menu {
+        flex-wrap: wrap;
         &__titre {
+            position: relative;
             font-weight: 300;
             font-size: 20px;
+            &::after {
+                content: "";
+                display: block;
+                position: absolute;
+                height: 3px;
+                width: 50px;
+                background: $color-tertiary;
+            }
+        }
+        h2 {
+            width: 100%;
+        }
+        &__line {
+            @media screen and (min-width: 768px) {
+                width: 30%;
+            }
+        }
+        @media screen and (min-width: 768px) {
+            display: flex;
+            gap: 2%;
         }
     }
 }
